Added temp text and up and down buttons on page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <script src="lib/jquery.js"></script>
   <script src="src/Thermostat.js"></script>
-
+  <script src="src/ThermostatInterface.js"></script>
 </head>
 <body>
 
-  <h1 id="temperature">20</h1>
+<center>
+  <h1 id="temperature"></h1>
+  <button id="up">Up!</button>
+  <button id="down">Down!</button>
+</center>
 
 </body>
-</head>
 </html>
