--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="lib/jquery.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="src/Thermostat.js"></script>
   <script src="src/ThermostatInterface.js"></script>
 </head>
@@ -9,8 +9,9 @@
 
 <center>
   <h1 id="temperature"></h1>
-  <button id="up">Up!</button>
-  <button id="down">Down!</button>
+  <button id="up"> + </button>
+  <button id="down"> - </button> <br><br>
+  <button id="reset">Reset</button>
 </center>
 
 </body>
