Added power save functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
   <h1 id="temperature"></h1>
   <button id="up"> + </button>
   <button id="down"> - </button> <br><br>
+  
+  <button id="powersave"> Power Save</button><br>
+  <br>
   <button id="reset">Reset</button>
+
+
+
 </center>
 
 </body>
