Can turn powersave on and off

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1 id="temperature"></h1>
   <button id="up"> + </button>
   <button id="down"> - </button> <br><br>
-  
-  <button id="powersave"> Power Save</button><br>
+  <button id="powersaveOn"> Power Save On </button><br>
+  <button id="powersaveOff"> Power Save Off </button><br>
   <br>
   <button id="reset">Reset</button>
 
