--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Thermostat</title>
+  <link rel="stylesheet" href="public/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="src/Thermostat.js"></script>
   <script src="src/ThermostatInterface.js"></script>
 </head>
 <body>
-
 <center>
-  <h1 id="temperature"></h1>
-  <button id="up"> + </button>
-  <button id="down"> - </button> <br><br>
-  <button id="powersaveOn"> Power Save On </button><br>
-  <button id="powersaveOff"> Power Save Off </button><br>
-  <br>
-  <button id="reset">Reset</button>
 
+
+    <h1 id="temperature"></h1>
+    <button id="up"> + </button>
+    <button id="down"> - </button> <br><br>
+    <button id="powersaveOn"> Power Save On </button><br>
+    <button id="powersaveOff"> Power Save Off </button><br>
+    <br>
+    <button id="reset">Reset</button>
+    
 
 
 </center>
-
 </body>
 </html>
